# Mandelbrot

./: CMakeLists.txt  README.md  main.cpp
include/: simulation.hpp
shaders/: mandelbrot.fs
src/: main.cpp  simulation.cpp
